RESOLVED FIXED43096
[chromium] linux chromium sends double clicks too often
https://bugs.webkit.org/show_bug.cgi?id=43096
Summary [chromium] linux chromium sends double clicks too often
Attachments
patch (8.15 KB, patch)
2010-07-27 18:27 PDT, Evan Stade
no flags
try2 (8.15 KB, patch)
2010-07-27 20:03 PDT, Evan Stade
no flags
Patch for landing (8.41 KB, patch)
2010-08-10 22:45 PDT, Adam Barth
no flags
Evan Stade
Comment 1 2010-07-27 18:27:10 PDT
WebKit Review Bot
Comment 2 2010-07-27 18:28:50 PDT
Attachment 62782 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/chromium/src/gtk/WebInputEventFactory.cpp:55: Use 0 instead of NULL. [readability/null] [5] WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:33: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:35: Alphabetical sorting problem. [build/include_order] [4] WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:37: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:113: One space before end of line comments [whitespace/comments] [5] Total errors found: 5 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tony Chang
Comment 3 2010-07-27 18:46:49 PDT
Comment on attachment 62782 [details] patch Please fix the style errors. Otherwise, LGTM. WebKit/chromium/src/gtk/WebInputEventFactory.cpp:48 + bool allowDoubleClick(gint timeDiff, gint xDiff, gint yDiff) Nit: Maybe call it isDoubleClick or countAsDoubleClick?
Evan Stade
Comment 4 2010-07-27 20:03:30 PDT
Created attachment 62792 [details] try2 nits fixed, but I think some of the header nits are not applicable for test files (since there is no equivalent .h for a given .cpp)
WebKit Review Bot
Comment 5 2010-07-27 20:07:55 PDT
Attachment 62792 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:33: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKit/chromium/tests/WebInputEventFactoryTestGtk.cpp:36: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tony Chang
Comment 6 2010-07-28 13:06:16 PDT
LGTM, but I'm not a reviewer
WebKit Commit Bot
Comment 7 2010-07-28 16:31:40 PDT
Comment on attachment 62792 [details] try2 Rejecting patch 62792 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 62792, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Logging in as eseidel@chromium.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=62792&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=43096&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 62792 from bug 43096. ERROR: /Users/eseidel/Projects/CommitQueue/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Evan Martin
Comment 8 2010-07-28 16:50:50 PDT
You need to leave in the "unreviewed (OOPS)" part of the changelog for the commit tools to accept it. :(
Adam Barth
Comment 9 2010-08-10 22:45:12 PDT
Created attachment 64072 [details] Patch for landing
WebKit Commit Bot
Comment 10 2010-08-11 06:45:58 PDT
Comment on attachment 64072 [details] Patch for landing Clearing flags on attachment: 64072 Committed r65152: <http://trac.webkit.org/changeset/65152>
WebKit Commit Bot
Comment 11 2010-08-11 06:46:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.