2010-08-11  Evan Stade  <estade@chromium.org>

Reviewed by David Levin.

        [chromium] linux chromium sends double clicks too often
        https://bugs.webkit.org/show_bug.cgi?id=43096

        * WebKit.gyp: add the test
        * src/gtk/WebInputEventFactory.cpp:
        (WebKit::WebInputEventFactory::mouseEvent): check the x/y coordinates of the
        potential double click event
        * tests/WebInputEventFactoryTestGtk.cpp: Added.

Canonical link: https://commits.webkit.org/55954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65152 268f45cc-cd09-0410-ab3c-d52691b4dbfc